apps/vagrant/tool-paperless/deploy/paperless-ingress-homepage-widget.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless
  annotations:
    gethomepage.dev/widget.username: "changeme"
    gethomepage.dev/widget.password: "changeme"
